<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_rasp">

    <fragment
        android:id="@+id/nav_rasp"
        android:name="com.garifullin_timur.testing.ui.rasp.RaspFragment"
        android:label="Расписание"
        tools:layout="@layout/fragment_rasp"
        />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.garifullin_timur.testing.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.garifullin_timur.testing.ui.teacher.TeacherFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_teacher" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.garifullin_timur.testing.ui.dz.DzFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_dz" />
    <fragment
        android:id="@+id/settingsFragment2"
        android:name="com.garifullin_timur.testing.SettingsFragment"
        android:label="SettingsFragment" />
</navigation>